# plymouth-theme-vanilla

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: build.yml  release.yml
debian/: changelog  control  copyright  debhelper-build-stamp  plymouth-theme-vanilla-bgrt.gsettings-override  plymouth-theme-vanilla-bgrt.install  plymouth-theme-vanilla-bgrt.postinst  plymouth-theme-vanilla-bgrt.postrm  plymouth-theme-vanilla-bgrt.preinst  plymouth-theme-vanilla-bgrt.prerm  plymouth-theme-vanilla-logo.install  plymouth-theme-vanilla-logo.postinst  plymouth-theme-vanilla-logo.postrm  plymouth-theme-vanilla-logo.preinst  plymouth-theme-vanilla-logo.prerm  plymouth-theme-vanilla-text.install  plymouth-theme-vanilla-text.postinst  plymouth-theme-vanilla-text.prerm  rules
po/: LINGUAS  POTFILES.in  be.po  cs.po  da.po  de.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  he.po  hr.po  hu.po  id.po  it.po  lt.po  ms.po  nl.po  pa.po  pl.po  plymouth-theme-vanilla.pot  plymouth.pot  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po  zh_HK.po  zh_TW.po
src/: meson.build
src/vanilla-bgrt/: meson.build  vanilla-bgrt.plymouth.desktop
src/vanilla-logo/: meson.build  vanilla-logo-scale-2.plymouth.in  vanilla-logo.plymouth.in
src/vanilla-logo/logo_assets/: vanilla-logo-scale-2.script  vanilla-logo.grub  vanilla-logo.script
src/vanilla-text/: meson.build  vanilla-text.plymouth
usr/share/plymouth/themes/vanilla-bgrt/: vanilla-bgrt.plymouth
usr/share/plymouth/themes/vanilla-logo/: vanilla-logo-scale-2.plymouth  vanilla-logo-scale-2.script  vanilla-logo.plymouth  vanilla-logo.script
